# ugene-old

./: .gitignore  CMakeLists.txt  build.txt  ugene.pro
src/corelibs/U2Algorithm/: CMakeLists.txt  U2Algorithm.pri  U2Algorithm.pro  U2Algorithm.qrc
src/corelibs/U2Algorithm/src/misc/: BinaryFindOpenCL.cpp  BinaryFindOpenCL.h  BitsTable.cpp  BitsTable.h  CDSearchTaskFactory.h  DnaAssemblyMultiTask.cpp  DnaAssemblyMultiTask.h  DynTable.h  EnzymeModel.cpp  EnzymeModel.h  FindAlgorithm.cpp  FindAlgorithm.h  FindAlgorithmTask.cpp  FindAlgorithmTask.h  GenomeAssemblyMultiTask.cpp  GenomeAssemblyMultiTask.h  RepeatFinderSettings.h  RepeatFinderTaskFactory.h  RollingArray.h  RollingMatrix.h  SArrayBasedFindTask.cpp  SArrayBasedFindTask.h  SArrayIndex.cpp  SequenceContentFilterTask.cpp  SequenceContentFilterTask.h  SyncSort.h
src/corelibs/U2Algorithm/src/molecular_geometry/: GeomUtils.h  (+7 more)
src/corelibs/U2Algorithm/transl/: czech.ts  english.ts  russian.ts
src/corelibs/U2Core/: CMakeLists.txt  U2Core.pri  U2Core.pro
src/corelibs/U2Core/transl/: chinese.ts  czech.ts  english.ts  russian.ts
src/corelibs/U2Formats/: CMakeLists.txt  U2Formats.pri  U2Formats.pro  U2Formats.qrc
src/corelibs/U2Formats/datafiles/: MMDBStdResidueDict
src/corelibs/U2Formats/src/: ABIFormat.cpp  ABIFormat.h  ACEFormat.cpp  ACEFormat.h  ASNFormat.cpp  ASNFormat.h  AbstractDifferentialFormat.cpp  AbstractDifferentialFormat.h  AbstractVariationFormat.cpp  AbstractVariationFormat.h  BAMUtils.cpp  BAMUtils.h  BedFormat.cpp  BedFormat.h  ClustalWAlnFormat.cpp  ClustalWAlnFormat.h  ColumnDataParser.cpp  ColumnDataParser.h  DNAQualityIOUtils.cpp  DNAQualityIOUtils.h  Database.cpp  Database.h  DatabaseConnectionFormat.cpp  DatabaseConnectionFormat.h  DifferentialExpressionFormat.cpp  DifferentialExpressionFormat.h  DifferentialFormat.cpp  DifferentialFormat.h  DocumentFormatUtils.cpp  DocumentFormatUtils.h  EMBLGenbankAbstractDocument.cpp  EMBLGenbankAbstractDocument.h  EMBLPlainTextFormat.cpp  EMBLPlainTextFormat.h  FastaFormat.cpp  FastaFormat.h  FastqFormat.cpp  FastqFormat.h  FileAndDirectoryUtils.h  FpkmTrackingFormat.cpp  (+63 more)
src/corelibs/U2Formats/transl/: chinese.ts  czech.ts  english.ts  russian.ts
src/corelibs/U2Gui/: CMakeLists.txt  U2Gui.pri  U2Gui.pro  U2Gui.qrc
src/corelibs/U2Gui/src/: AppSettingsGUI.h  DelayedAddDocumentAndOpenViewTask.cpp  DelayedAddDocumentAndOpenViewTask.h  MainWindow.cpp  MainWindow.h  Notification.cpp  Notification.h  NotificationWidget.cpp  NotificationWidget.h  NotificationsTypes.h  ObjectViewModel.cpp  ObjectViewModel.h  ObjectViewTasks.cpp  ObjectViewTasks.h  OpenViewTask.cpp  OpenViewTask.h  PasteController.cpp  PasteController.h  PluginViewer.h  ProjectParsing.cpp  ProjectParsing.h  ProjectView.h  ToolsMenu.cpp  ToolsMenu.h  U2SavableWidget.cpp  U2SavableWidget.h  U2WidgetStateStorage.cpp  U2WidgetStateStorage.h  UnloadDocumentTask.cpp  UnloadDocumentTask.h  WelcomePageAction.cpp  WelcomePageAction.h
src/corelibs/U2Gui/transl/: chinese.ts  czech.ts  english.ts  russian.ts
src/corelibs/U2Lang/: CMakeLists.txt  U2Lang.pri  U2Lang.pro  U2Lang.qrc
src/corelibs/U2Lang/transl/: chinese.ts  czech.ts  english.ts  russian.ts
src/corelibs/U2Private/: CMakeLists.txt  U2Private.pri  U2Private.pro  masmx64.rules
src/corelibs/U2Private/src/: AppContextImpl.cpp  AppContextImpl.h  AppSettingsImpl.cpp  AppSettingsImpl.h  ConsoleLogDriver.cpp  ConsoleLogDriver.h  CrashHandler.cpp  CrashHandler.h  CredentialsAskerCli.cpp  CredentialsAskerCli.h  DocumentFormatRegistryImpl.cpp  DocumentFormatRegistryImpl.h  IOAdapterRegistryImpl.cpp  IOAdapterRegistryImpl.h  LogSettings.cpp  LogSettings.h  PluginDescriptor.cpp  PluginDescriptor.h  PluginSupportImpl.cpp  PluginSupportImpl.h  ServiceRegistryImpl.cpp  ServiceRegistryImpl.h  SettingsImpl.cpp  SettingsImpl.h  SleepPreventerMac.cpp  SleepPreventerMac.h  SleepPreventerMac.mm  StackRollbackX64.asm  StackWalker.cpp  StackWalker.h  TaskSchedulerImpl.cpp  TaskSchedulerImpl.h  private.h
src/corelibs/U2Private/transl/: chinese.ts  czech.ts  english.ts  russian.ts
src/corelibs/U2Remote/: CMakeLists.txt  U2Remote.pri  U2Remote.pro
src/corelibs/U2Remote/src/: DistributedComputingUtil.cpp  DistributedComputingUtil.h  PingTask.cpp  PingTask.h  ProtocolInfo.cpp  ProtocolInfo.h  ProtocolUI.cpp  ProtocolUI.h  RemoteMachine.cpp  RemoteMachine.h  RemoteMachineMonitor.cpp  RemoteMachineMonitor.h  RemoteMachineMonitorDialogController.cpp  RemoteMachineMonitorDialogController.h  RemoteMachineMonitorDialogImpl.cpp  RemoteMachineMonitorDialogImpl.h  RemoteMachineScanDialogImpl.cpp  RemoteMachineScanDialogImpl.h  RemoteMachineScanner.cpp  RemoteMachineScanner.h  RemoteMachineSettingsDialog.cpp  RemoteMachineSettingsDialog.h  RemoteMachineSettingsDialog.ui  RemoteMachineTasks.cpp  RemoteMachineTasks.h  RemoteWorkflowRunTask.cpp  RemoteWorkflowRunTask.h  Serializable.cpp  Serializable.h  SerializeUtils.cpp  SerializeUtils.h  SynchHttp.cpp  SynchHttp.h  TaskDistributor.h
src/corelibs/U2Remote/transl/: chinese.ts  czech.ts  english.ts  russian.ts
src/corelibs/U2Test/: CMakeLists.txt  GUITestingWindow.ui  U2Test.pri  U2Test.pro
src/corelibs/U2Test/src/: APITestRunner.h  GTest.cpp  GTest.h  GTestFrameworkComponents.cpp  GTestFrameworkComponents.h  TestRunnerSettings.h  TestRunnerTask.cpp  TestRunnerTask.h
src/corelibs/U2Test/transl/: chinese.ts  czech.ts  english.ts  russian.ts
src/corelibs/U2View/: CMakeLists.txt  U2View.pri  U2View.pro
src/corelibs/U2View/src/: Init.cpp  Init.h  LicenseDialog.cpp  LicenseDialog.h  UndoRedoFramework.cpp  UndoRedoFramework.h  WebWindow.cpp  WebWindow.h
src/corelibs/U2View/transl/: chinese.ts  czech.ts  english.ts  russian.ts
src/libs_3rdparty/breakpad/: CMakeLists.txt  breakpad.pri  breakpad.pro
src/libs_3rdparty/samtools/: CMakeLists.txt  samtools.pri  samtools.pro
src/libs_3rdparty/samtools/src/: SamtoolsAdapter.cpp  SamtoolsAdapter.h
src/libs_3rdparty/samtools/transl/: english.ts  russian.ts
src/libs_3rdparty/sqlite3/: CMakeLists.txt  sqlite3.pri  sqlite3.pro
src/libs_3rdparty/sqlite3/src/: sqlite3.def
(+7139 files in other folders)
